examples/SmallPython/files/bad/b7.py
def foo():
    def bar():
    1
